Java 23 (#5)
* before DEMO

* after demo